Estabilizacion de formulario

--- a/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
+++ b/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
@@ -9,6 +9,7 @@
           <tr>
             <th class="browser-icons"></th>
             <th>Nombre del comando</th>
+            <th>Estado</th>
             <th class="align-right">Fecha de creación</th>
           </tr>
           </thead>
@@ -16,6 +17,7 @@
           <tr class='no-top-border'>
             <td><span class="fa fa-terminal"></span></td>
             <td ngClass="nowrap"><a routerLink="/pages/detail-command"> Docker</a></td>
+            <td class="align-right">editable</td>
             <td class="align-right">12-13-1200</td>
           </tr>
           </tbody>
