--- a/cliente/ng2-admin/src/app/pages/commands/formCommand/formCommand.html
+++ b/cliente/ng2-admin/src/app/pages/commands/formCommand/formCommand.html
@@ -2,40 +2,42 @@
   <div class="auth-block">
     <h1>Sign up to ng2-admin</h1>
     <a routerLink="/login" class="auth-link">Already have an ng2-admin account? Sign in!</a>
-
     <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
-      <div class="form-group row" [ngClass]="{'has-error': (!name.valid && name.touched), 'has-success': (name.valid && name.touched)}">
-        <label for="inputName3" class="col-sm-2 control-label">Name</label>
-
+      <div class="form-group row"
+        [ngClass]="{'has-error': (!title.valid && title.touched), 'has-success': (title.valid && title.touched)}"
+        >
+        <label for="title" class="col-sm-2 control-label">Titulo</label>
         <div class="col-sm-10">
-          <input [formControl]="name" type="text" class="form-control" id="inputName3" placeholder="Full Name">
+          <input [formControl]="title" type="text" class="form-control" id="title" placeholder="Title">
         </div>
       </div>
-      <div class="form-group row" [ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
 
-        <div class="col-sm-10">
-          <input [formControl]="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
-        </div>
-      </div>
-      <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
 
-        <div class="col-sm-10">
-          <input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
-        </div>
-      </div>
-      <div class="form-group row" [ngClass]="{'has-error': (!repeatPassword.valid && repeatPassword.touched), 'has-success': (repeatPassword.valid && repeatPassword.touched)}">
-        <label for="inputPassword4" class="col-sm-2 control-label">Repeat</label>
 
-        <div class="col-sm-10">
-          <input [formControl]="repeatPassword" type="password" class="form-control" id="inputPassword4" placeholder="Repeat">
-          <span *ngIf="!passwords.valid && (password.touched || repeatPassword.touched)" class="help-block sub-little-text">Passwords don't match.</span>
-        </div>
+
+
+  <div class="form-group row" [ngClass]="{'has-error': (!is_edit.valid && is_edit.touched), 'has-success': (is_edit.valid && is_edit.touched)}">
+      <div class="col-md-4">
+        <label class="checkbox-inline custom-radio nowrap">
+          <input [formControl]="is_edit" type="checkbox" name="is_edit" id="is_edit" value="option3">
+          <span>Publico</span>
+        </label>
       </div>
+</div>
+
+
+
+  <div class="row">
+    <ba-card title="Basic Example" baCardClass="with-scroll">
+      <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"></ng2-smart-table>
+    </ba-card>
+  </div>
+
+
+
       <div class="form-group row">
-        <div class="offset-sm-2 col-sm-10">
-          <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-auth">Sign up</button>
+        <div class="offset-sm-2 col-sm-10">[disabled]="!form.valid"
+          <button  type="submit" class="btn btn-default btn-auth">Sign up</button>
         </div>
       </div>
     </form>
