--- a/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
+++ b/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
@@ -2,8 +2,15 @@
   <div class="row">
     <div class="col-lg-12 col-md-12">
       <div class="horizontal-scroll">
-        <ba-card class="col-xlg-12 col-xl-12 col-lg-12 col-sm-12 col-xs-12"
-                 title="Comandos">
+        <ba-card class="col-xlg-12 col-xl-12 col-lg-12 col-sm-12 col-xs-12">
+          <div class="container-fluid">
+            <div class="row-fluid">
+              <div class="offset1 pull-right">
+              <button routerLink="/pages/form-command" class="btn btn-link btn-default"><span class="fa fa-plus-square-o"></span> Crear comando</button>
+              </div>
+            </div>
+          </div>
+          <br/>
           <table class="table table-condensed">
             <thead>
             <tr>
