--- a/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
+++ b/cliente/ng2-admin/src/app/pages/commands/listCommands/listCommands.html
@@ -12,27 +12,23 @@
           </div>
           <br/>
 
-          <ul>
-            <li *ngFor="let item of dataList.data   ">
-              - {{item.title}}
-            </li>
-          </ul>
-
           <table class="table table-condensed">
             <thead>
             <tr>
               <th class="browser-icons"></th>
               <th>Nombre del comando</th>
-              <th>Estado</th>
+              <th class="align-center">Publico</th>
+              <th class="align-center">Editable</th>
               <th class="align-right">Fecha de creación</th>
             </tr>
             </thead>
             <tbody>
-            <tr class='no-top-border'>
+            <tr class='no-top-border' *ngFor="let item of dataList.data">
               <td><span class="fa fa-terminal"></span></td>
-              <td ngClass="nowrap"><a routerLink="/pages/detail-command"> Docker</a></td>
-              <td class="align-right">editable</td>
-              <td class="align-right">12-13-1200</td>
+              <td ngClass="nowrap"><a [routerLink]="['/pages/detail-command',item._id]">{{item.title}}</a></td>
+              <td class="align-center">{{item.is_public}}</td>
+              <td class="align-center">{{item.is_edit}}</td>
+              <td class="align-right"><i class="ion-calendar"></i> {{item.dateCreate| date:'dd-MM-yyyy'}}</td>
             </tr>
             </tbody>
           </table>
