Logica basica para inicio de sesion

--- a/cliente/ng2-admin/src/app/pages/login/login.html
+++ b/cliente/ng2-admin/src/app/pages/login/login.html
@@ -26,6 +26,7 @@
       </div>
     </form>
 
+    <h2 *ngIf="errorLogin">No se pudo iniciar sesion </h2>
     <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
 
     <div class="al-share-auth">
