--- a/cliente/ng2-admin/src/app/pages/login/login.html
+++ b/cliente/ng2-admin/src/app/pages/login/login.html
@@ -2,6 +2,9 @@
   <div class="auth-block">
     <h1>Sign in to ng2-admin</h1>
     <a routerLink="/register" class="auth-link">New to ng2-admin? Sign up!</a>
+    <alert   *ngIf="errorLogin" type="danger" dismissible="true" >
+      No se pudo iniciar sesion
+    </alert>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
       <div class="form-group row" [ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">
@@ -19,14 +22,16 @@
         </div>
       </div>
       <div class="form-group row">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-auth">Sign in</button>
+
+        <div class="col-md-8 col-sm-10 text-left">
           <a routerLink="/login" class="forgot-pass">Forgot password?</a>
+        </div>
+        <div class="col-md-4 col-sm-10 align-right">
+          <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-auth">Sign in</button>
         </div>
       </div>
     </form>
 
-    <h2 *ngIf="errorLogin">No se pudo iniciar sesion </h2>
     <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
 
     <div class="al-share-auth">
